--- a/page45.html
+++ b/page45.html
@@ -39,9 +39,9 @@
 <!-- /Google Analytics -->
 
 
-<section id="menu-fh" data-rv-view="2438">
+<section id="menu-fh" data-rv-view="10">
 
-    <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web page builder software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-fj" data-rv-view="2442" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-fj" data-rv-view="14" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -102,7 +102,7 @@
 
 </section>
 
-<div id="custom-html-fk" custom-code="true" data-rv-view="2445"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-fk" custom-code="true" data-rv-view="17"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -186,7 +186,7 @@
 </script>
 
 <div class="header-container">
-    <h1 class="header-text">What Do You Do in Your Free Time?</h1>
+    <h1 class="header-text">Which Sounds the Most Fun?</h1>
 </div>
 
 <form>
@@ -197,31 +197,31 @@
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="11" onclick="check(this.id);">
                     <label for="11">
-                    <div class="text-container"><h1 class="text-answer">Read</h1></div></label></div></th>
+                    <div class="text-container"><h1 class="text-answer">Dinner with Friends</h1></div></label></div></th>
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="12" onclick="check(this.id);">
                     <label for="12">
-                    <div class="text-container"><h1 class="text-answer">Watch Comedy Shows</h1></div></label></div></th>
+                    <div class="text-container"><h1 class="text-answer">Netflix at Home</h1></div></label></div></th>
             </tr>
             <tr>
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="13" onclick="check(this.id);">
                     <label for="13">
-                        <div class="text-container"><h1 class="text-answer">Contemplate Life</h1></div></label></div></th>
+                        <div class="text-container"><h1 class="text-answer">Reading a Book</h1></div></label></div></th>
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="14" onclick="check(this.id);">
                     <label for="14">
-                    <div class="text-container"><h1 class="text-answer">Something Artsy</h1></div></label></div></th>
+                    <div class="text-container"><h1 class="text-answer">Going to a Party</h1></div></label></div></th>
             </tr>
             <tr>
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="15" onclick="check(this.id);">
                     <label for="15">
-                        <div class="text-container"><h1 class="text-answer">Watch Netflix</h1></div></label></div></th>
+                        <div class="text-container"><h1 class="text-answer">Going on a Roller Coaster</h1></div></label></div></th>
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="16" onclick="check(this.id);">
                     <label for="16">
-                    <div class="text-container"><h1 class="text-answer">Exercise</h1></div></label></div></th>
+                    <div class="text-container"><h1 class="text-answer">Visiting a Museum</h1></div></label></div></th>
             </tr>
     </tbody>
     </table>
@@ -229,7 +229,7 @@
 </form>
 
 <div class="header-container">
-    <h1 class="header-text">What's Your Favorite Subject?</h1>
+    <h1 class="header-text">Which of These Cities is Your Favorite?</h1>
 </div>
 
 <form>
@@ -240,31 +240,31 @@
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="21" onclick="check(this.id);">
                     <label for="21">
-                    <div class="text-container"><h1 class="text-answer">English</h1></div></label></div></th>
+                    <div class="text-container"><h1 class="text-answer">London</h1></div></label></div></th>
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="22" onclick="check(this.id);">
                     <label for="22">
-                    <div class="text-container"><h1 class="text-answer">Math</h1></div></label></div></th>
+                    <div class="text-container"><h1 class="text-answer">Paris</h1></div></label></div></th>
             </tr>
             <tr>
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="23" onclick="check(this.id);">
                     <label for="23">
-                        <div class="text-container"><h1 class="text-answer">Free Block</h1></div></label></div></th>
+                        <div class="text-container"><h1 class="text-answer">New York City</h1></div></label></div></th>
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="24" onclick="check(this.id);">
                     <label for="24">
-                    <div class="text-container"><h1 class="text-answer">The Arts</h1></div></label></div></th>
+                    <div class="text-container"><h1 class="text-answer">Amsterdam</h1></div></label></div></th>
             </tr>
             <tr>
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="25" onclick="check(this.id);">
                     <label for="25">
-                        <div class="text-container"><h1 class="text-answer">Science</h1></div></label></div></th>
+                        <div class="text-container"><h1 class="text-answer">Brussels</h1></div></label></div></th>
                 <th><div class="picture-container">
                     <input type="checkbox" class="image-checkbox" id="26" onclick="check(this.id);">
                     <label for="26">
-                    <div class="text-container"><h1 class="text-answer">Social Studies</h1></div></label></div></th>
+                    <div class="text-container"><h1 class="text-answer">I don't like cities.</h1></div></label></div></th>
             </tr>
     </tbody>
     </table>
@@ -407,7 +407,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fi" data-rv-view="2440" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fi" data-rv-view="12" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
