--- a/Article Page.html
+++ b/Article Page.html
@@ -39,9 +39,9 @@
 <!-- /Google Analytics -->
 
 
-<section id="menu-1o" data-rv-view="179">
+<section id="menu-1o" data-rv-view="252">
 
-    <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1q" data-rv-view="183" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/d">web software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1q" data-rv-view="256" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-1v" data-rv-view="186" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-1v" data-rv-view="259" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-20" data-rv-view="188" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-20" data-rv-view="261" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -114,7 +114,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-21" data-rv-view="190" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-21" data-rv-view="263" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -124,7 +124,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-22" data-rv-view="192" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-22" data-rv-view="265" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -135,7 +135,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-23" data-rv-view="194" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-23" data-rv-view="267" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -145,7 +145,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1p" data-rv-view="181" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1p" data-rv-view="254" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
