--- a/page16.html
+++ b/page16.html
@@ -39,9 +39,9 @@
 <!-- /Google Analytics -->
 
 
-<section id="menu-3q" data-rv-view="288">
+<section id="menu-3q" data-rv-view="351">
 
-    <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">website design software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-3s" data-rv-view="292" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-3s" data-rv-view="355" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-3t" data-rv-view="295" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-3t" data-rv-view="358" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -98,7 +98,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-3u" data-rv-view="297" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-3u" data-rv-view="360" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -115,7 +115,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-3v" data-rv-view="299" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-3v" data-rv-view="362" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -128,7 +128,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-3w" data-rv-view="301" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-3w" data-rv-view="364" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -139,7 +139,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-3x" data-rv-view="303" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-3x" data-rv-view="366" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -152,7 +152,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-3y" data-rv-view="305" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-3y" data-rv-view="368" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -162,7 +162,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-3r" data-rv-view="290" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-3r" data-rv-view="353" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
