--- a/page19.html
+++ b/page19.html
@@ -39,9 +39,9 @@
 <!-- /Google Analytics -->
 
 
-<section id="menu-4o" data-rv-view="351">
+<section id="menu-4o" data-rv-view="414">
 
-    <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4q" data-rv-view="355" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/h">make your own website for free</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4q" data-rv-view="418" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-4r" data-rv-view="358" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-4r" data-rv-view="421" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4p" data-rv-view="353" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4p" data-rv-view="416" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
