--- a/page29.html
+++ b/page29.html
@@ -39,9 +39,9 @@
 <!-- /Google Analytics -->
 
 
-<section id="menu-8m" data-rv-view="571">
+<section id="menu-8m" data-rv-view="634">
 
-    <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-8o" data-rv-view="575" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobirise.co/l">bootstrap themes</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-8o" data-rv-view="638" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 80px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-8p" data-rv-view="578" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-8p" data-rv-view="641" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-8s" data-rv-view="580" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-8s" data-rv-view="643" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -108,7 +108,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-8t" data-rv-view="582" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-8t" data-rv-view="645" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -118,7 +118,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-8n" data-rv-view="573" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-8n" data-rv-view="636" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
