--- a/page41.html
+++ b/page41.html
@@ -40,9 +40,9 @@
 <!-- /Google Analytics -->
 
 
-<section id="menu-dw" data-rv-view="939">
+<section id="menu-dw" data-rv-view="1002">
 
-    <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">web site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader17 mbr-after-navbar" id="extHeader17-e1" data-rv-view="943" style="background-image: url(assets/images/img-extheader17-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/h">make your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader17 mbr-after-navbar" id="extHeader17-e1" data-rv-view="1006" style="background-image: url(assets/images/img-extheader17-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -97,7 +97,7 @@
     <div class="mbr-arrow mbr-arrow-floating hidden-sm-down" aria-hidden="true"><a href="#content1-dz"><i class="mbr-arrow-icon"></i></a></div>                 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-dz" data-rv-view="946" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-dz" data-rv-view="1009" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -107,7 +107,7 @@
 
 </section>
 
-<section class="mbr-section extCountdown1" id="extCountdown1-e0" data-rv-view="948" style="background-color: rgb(145, 189, 174); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section extCountdown1" id="extCountdown1-e0" data-rv-view="1011" style="background-color: rgb(145, 189, 174); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -117,7 +117,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-dx" data-rv-view="941" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-dx" data-rv-view="1004" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
