--- a/Arts.html
+++ b/Arts.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">free website maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="309" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="309" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -88,17 +88,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">Winter Art Vernissage</h3>
+                            <h3 class="mbr-section-title display-2">Obverse Art Show</h3>
 
                             <div class="mbr-section-text">
-                                <p>An article about the Winter Art Vernissage, <br>reactions to it, and inspiration for the artists.</p>
+                                <p>An article about the Obverse Art Show and the artists' inspiration.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page38.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page47.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/24796630-10155341163966747-151520171172123512-n-1-960x720.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/dsc00119-1400x1050.jpg"></div>
                         </div>
 
                     </div>
@@ -120,12 +120,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
               <div class="card cart-block">
-                  <div class="card-img"><img src="assets/images/ts-night-photography-600x337.jpg" class="card-img-top"></div>
+                  <div class="card-img"><img src="assets/images/24796630-10155341163966747-151520171172123512-n-1-960x720.jpg" class="card-img-top"></div>
                   <div class="card-block">
-                    <h4 class="card-title">Taking the Perfect Picture</h4>
-                    <h5 class="card-subtitle">Written By: Shahriar Hossain</h5>
-                    <p class="card-text">With this article, you can take much more professional photos.</p>
-                    <div class="card-btn"><a href="page14.html" class="btn btn-danger">MORE</a></div>
+                    <h4 class="card-title">Winter Art Vernissage</h4>
+                    <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
+                    <p class="card-text">An article about the Winter Art Vernissage, <br>reactions to it, and inspiration for the artists.</p>
+                    <div class="card-btn"><a href="page38.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
