--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">website maker</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box4-fl" data-rv-view="75" style="background-image: url(assets/images/mbr-10-1620x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box4-fl" data-rv-view="75" style="background-image: url(assets/images/mbr-10-1620x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
 
     
     <div class="container">
@@ -137,12 +137,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/24796630-10155341163966747-151520171172123512-n-600x450.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/dsc00119-600x450.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Winter Art Vernissage</h4>
+                        <h4 class="card-title">Obverse Art Show</h4>
                         <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
-                        <p class="card-text">An article about the Winter Art Vernissage, reactions to it, and inspiration for the artists.<br><br></p>
-                        <div class="card-btn"><a href="page38.html" class="btn btn-danger">MORE</a></div>
+                        <p class="card-text">An article about the Obverse Art Show and the artists' inspiration.<br></p>
+                        <div class="card-btn"><a href="page47.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
