--- a/page47.html
+++ b/page47.html
@@ -74,7 +74,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create a website for free</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-fy" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" data-rv-view="1153" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/c">free web site maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-fy" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" data-rv-view="1153" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -252,7 +252,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><strong>Stephanie Wintjes</strong></p><p><br></p><p>Stephanie was previously an art teacher at St. John’s, but is currently at art school. When she worked at the school, they used to have community shows, but this is her first real exhibition in The Green Gallery and she is excited to be called a “visiting artist.”</p><p><br></p><p>
+            <div class="col-xs-12 lead"><p><strong>Stephanie Wintjes</strong></p><p><br></p><p>Stephanie was previously an art teacher at St. John’s, but is currently at art school. When she worked at the school, they used to have community shows, but this is her first real exhibition in The Greene Gallery and she is excited to be called a “visiting artist.”</p><p><br></p><p>
 </p><p>
 </p><p>Stephanie is fascinated by still life. She believes that it is a way to capture a dramatic moment that might otherwise be overlooked. Her inspiration for her recent work came from the work of a Spanish artist named Cotom. He painted dark cupboards with vegetables hanging on strings. This was how the Spanish people kept their produce separate to keep them from rotting. To her, this was truly magical to see these floating vegetables and she wished to capture the drama. Madame Froidcoeur, a HS Social Studies teacher was, “intrigued by the tension of the string holding something as massive as a vegetable,” in Stephanie’s work. Plus, she is “drawn to anything that has to do with food anyway.”</p><p><br></p><p>
 </p><p>
