--- a/page46.html
+++ b/page46.html
@@ -70,7 +70,7 @@
         </div>
     </nav>
 
-</section><section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section></div>
+</section><section class="engine"><a href="https://mobirise.co/l">bootstrap themes</a></section></div>
 
 <section class="mbr-section form1 mbr-after-navbar" id="form1-fs" data-rv-view="96" style="background-color: rgb(145, 189, 174); padding-top: 120px; padding-bottom: 120px;">
     
@@ -97,7 +97,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="x0OFCTiXpIX6333gT01JWEjbzLV/LwUXMgpXewNnJbTxwWXxTn6se8vYKEVU+JcrpNhMLFeSoaIZR74L9NzORhvzJ0dWNcxcDxLbsvDYxKX+W8LZ63NCafXnBPYXABKo" data-form-email="true">
+                        <input type="hidden" value="vB1wNK2891tbn/QMhne8ipgYFmbUO26MR2JJXw9uqga2OzMs3EOMg+hJZP0yXRg6Z2VXXcRcL0NlAv72fPlJXnt3GGIL9F+xgjAfPT2LraTj/r6VFaOWJ/U3fkXCnCEL" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -125,7 +125,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="form-control-label" for="form1-fs-message">Daily Goal</label>
+                            <label class="form-control-label" for="form1-fs-message">Daily Goal and Proposed Charity</label>
                             <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-fs-message"></textarea>
                         </div>
 
