--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/q">free website maker download</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box4-fl" data-rv-view="10" style="background-image: url(assets/images/mbr-10-1620x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
+<section class="engine"><a href="https://mobirise.ws/h">make own website</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box4-fl" data-rv-view="10" style="background-image: url(assets/images/mbr-10-1620x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
 
     
     <div class="container">
@@ -124,12 +124,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/fotojet-8-600x40026.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/opening-810x540-800x533.png" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">The True Story of Conrad Birdie</h4>
+                        <h4 class="card-title">THIMUN</h4>
                         <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
-                        <p class="card-text">Where did this megastar really come from?<br></p>
-                        <div class="card-btn"><a href="page37.html" class="btn btn-danger">MORE</a></div>
+                        <p class="card-text">The Hague International Model United Nations: An Incredible Experience<br></p>
+                        <div class="card-btn"><a href="page49.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
