--- a/Archives.html
+++ b/Archives.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/a">best site builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="20" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.ws/n">mobile website maker app</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1m" data-rv-view="20" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -100,7 +100,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Unspoken Stresses of the IB</h4>
                         <h5 class="card-subtitle"></h5>
-                        <p class="card-text">An article by Ceola Daly on the stresses of the IB that no one talks about and how to handle them</p>
+                        <p class="card-text">An article by <strong>Ceola Daly</strong> on the stresses of the IB that no one talks about and how to handle them</p>
                         <div class="card-btn"><a href="page48.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
@@ -122,12 +122,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-1200x800.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/opening-810x540-800x533.png" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Coming Soon</h4>
-                        <h5 class="card-subtitle">Who Will Write Next?</h5>
-                        <p class="card-text">More articles being written... literary genius takes time. :)</p>
-                        <div class="card-btn"><a href="page17.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">THIMUN</h4>
+                        <h5 class="card-subtitle">Written By: Aimee Dastin-van Rijn</h5>
+                        <p class="card-text">The Hague International Model United Nations: An Incredible Experience</p>
+                        <div class="card-btn"><a href="page49.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Reading Suggestions for the Cold Season</h4>
                         <h5 class="card-subtitle"></h5>
-                        <p class="card-text">Book recommendations for this Winter.</p>
+                        <p class="card-text">Book recommendations by <strong>Ilinca Maria Manda</strong> for this Winter.</p>
                         <div class="card-btn"><a href="page36.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
