--- a/Events.html
+++ b/Events.html
@@ -9,10 +9,10 @@
   <link rel="shortcut icon" href="assets/images/20988002-1378120402302790-1549326759-n-2-130x128.png" type="image/x-icon">
   <meta name="description" content="Website Generator Description">
   <title>Events</title>
-  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin">
+  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best website software</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="187" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.ws/j">design your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-12" data-rv-view="187" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -88,17 +88,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">CAS Fair</h3>
+                            <h3 class="mbr-section-title display-2">THIMUN</h3>
 
                             <div class="mbr-section-text">
-                                <p>An article describing the high school CAS event and information presented in it</p>
+                                <p>The Hague International Model United Nations: An Incredible Experience</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page25.html">MORE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page49.html">MORE</a></div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/img-1400x1050.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/opening-810x540-800x533.png"></div>
                         </div>
 
                     </div>
@@ -117,7 +117,7 @@
         <div class=" row">
             <div class=" col-xs-12">
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider2-13" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider2-13" class="" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-13" data-slide-to="2"></li>
+                    <li data-app-prevent-settings="" data-target="#slider2-13" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider2-13" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider2-13" class="" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section carousel-item dark center active" data-bg-video-slide="false">
@@ -150,17 +150,17 @@
                                 </div>
                             </div>
                         </div>
-                    </div><div class="mbr-section carousel-item dark center" data-bg-video-slide="https://www.youtube.com/watch?v=uNCr7NdOJgw">
+                    </div><div class="mbr-section carousel-item dark center" data-bg-video-slide="false">
                         <div class="mbr-table-cell">
                             <div class="mbr-overlay"></div>
                             <div class="container-slide">
-                                <img src="assets/images/bridge.jpg">
+                                <img src="assets/images/img-1400x1050.jpg">
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-1">
-                                        <h2 class="mbr-section-title display-2">Coming Soon</h2>
-                                        <p class="mbr-section-lead lead">More articles being written... literary genius takes time. :) </p>
+                                        <h2 class="mbr-section-title display-2">CAS Fair</h2>
+                                        <p class="mbr-section-lead lead">An article describing the high school CAS event and information presented in it </p>
 
-                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page17.html">See Full Article</a> </div>
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="page25.html">See Full Article</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -192,14 +192,12 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/mobirise-slider-video/script.js"></script>
   
   
   <input name="animation" type="hidden">
