--- a/page49.html
+++ b/page49.html
@@ -74,7 +74,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/j">design own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-gd" data-rv-view="1278" style="background-image: url(assets/images/mun-873x578.png);">
+<section class="engine"><a href="https://mobirise.ws/c">best website maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-gd" data-rv-view="1278" style="background-image: url(assets/images/mun-873x578.png);">
 
     
 
@@ -209,7 +209,7 @@
         <div class="row">
             <div class="col-xs-12 lead"><p>MUN is not truly appreciated for the amazing activity that it is, as one cannot know how wonderful it feels to have one’s resolution be passed or how fantastic it feels to ask a point of information in front of a couple hundred of your peers, until you have actually experienced it. The conference seemed to exceed the expectations of every student involved.</p><p><br></p><p> 
 </p><p>
-</p><p>An 11th grade 1st-time THIMUN student Maxime Giot said, “THIMUN is an amazing experience as you learn more about the world and about diplomatic relations in the purpose of solving big issues. I learned so much, including how to speak in front of 175 people while using diplomatic language, as well as how to write resolutions.”
+</p><p>An 11th grade 1st-time THIMUN student Maxime said, “THIMUN is an amazing experience as you learn more about the world and about diplomatic relations in the purpose of solving big issues. I learned so much, including how to speak in front of 175 people while using diplomatic language, as well as how to write resolutions.”
 </p></div>
         </div>
     </div>
