--- a/page43.html
+++ b/page43.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-  <section id="menu-ey" data-rv-view="1080">
+  <section id="menu-ey" data-rv-view="1005">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop site builder</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-f0" data-rv-view="1084" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.ws/f">simple website creator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-f0" data-rv-view="1009" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -102,7 +102,7 @@
 
 </section>
 
-<div id="custom-html-f1" custom-code="true" data-rv-view="1087"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-f1" custom-code="true" data-rv-view="1012"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -407,7 +407,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="1082" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="1007" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
